--- a/coursework1/Page1.html
+++ b/coursework1/Page1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
   <body>
+    <img src="pics/Logo.png" alt="Logo"/>
 <div>
   <header>
 <h1>Black Panther</h1>
@@ -38,7 +39,7 @@ from myself -->
 <div>
   <!-- I will try to add an image before the video starts so its not just a Black
   screen. -->
-  <video width="950" height="500" controls poster="pics/poster.jpg" >
+  <video width="1000" height="500" controls poster="pics/poster.jpg" >
 <source src="Vid/Black Panther Teaser Trailer.mp4"
 type='video/mp4'/>
 <source src="Vid/Black Panther Teaser Trailer.webm"
