--- a/coursework1/Page1.html
+++ b/coursework1/Page1.html
@@ -56,7 +56,7 @@ name before the name of the link but now, I have corrected it and it should work
 </div>
 
 <footer>
-<p> P2597312 </p> <!-- Had some difficulties trying to do a footer-->
+<p> Levi Simpson, P2597312 </p> <!-- Had some difficulties trying to do a footer-->
 </footer>
 
  </body>
