--- a/coursework1/Page2.html
+++ b/coursework1/Page2.html
@@ -92,7 +92,7 @@ it should look different however it may not change. -->
 <!-- For both of these audio files, It was best to keep it on control so that
 the user had the option to stop it.-->
 <footer>
-<p> P2597312 </p>
+<p> Levi Simpson, P2597312 </p>
 </footer>
 </div>
 
