--- a/coursework1/Page2.html
+++ b/coursework1/Page2.html
@@ -27,7 +27,7 @@ the actors history or just the roles they palyed and about it. -->
 
 <div>
   <section>
-<img src="pics/Chadwick.jpg" alt="Chadwick Boseman"/>
+<img src="pics/Chad.jpg" alt="Chadwick Boseman"/>
 <!-- Standard picture of Chadwick Boseman -->
 
 <p>
